fixed padding on list stamps for readability

--- a/src/app/biography-result-stamp/biography-result-stamp.component.scss
+++ b/src/app/biography-result-stamp/biography-result-stamp.component.scss
@@ -87,7 +87,7 @@
     color: color(dark-grey);
 
     font-size: 1rem;
-    padding-bottom: em(6);
+    padding: 0 em(2) em(6) em(2); // top right bottom left
     width: 100%;
 
     &:hover,
@@ -111,7 +111,7 @@
     color: color(dark-grey);
     font-size: 1rem;
     margin: 0;
-    padding: 0;
+    padding: 0 em(2) 0 em(2); // top right bottom left
     border: none;
 
     @media screen and (min-width: bp(afl_small)) and (max-width: bp(afl_medium_just_before)) {
@@ -132,7 +132,7 @@
   color: color(dark-grey);
   font-size: 1rem;
   margin: 0;
-  padding: 0;
+  padding: 0 em(2) 0 em(2); // top right bottom left
   border: none;
 
   @media screen and (min-width: bp(afl_small)) and (max-width: bp(afl_medium_just_before)) {
